--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -48,7 +48,9 @@ signs:
       - "--detach-sign"
       - "${artifact}"
 release:
-  # If you want to manually examine the release before its live, uncomment this line:
-  # draft: true
+  disable: false
+  github:
+      owner: zhoue341
+      name: <your_repo>
 changelog:
   skip: true
